--- a/src/site/notes/个人记录/首页.md
+++ b/src/site/notes/个人记录/首页.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-permalink":"homepage","permalink":"/homepage/","dgHomeLink":true,"dgPassFrontmatter":false}
+{"dg-publish":true,"dg-permalink":"homepage","permalink":"/homepage/","tags":"gardenEntry","dgHomeLink":true,"dgPassFrontmatter":false}
 ---
 
 
