--- a/src/site/notes/前端/浏览器/请求优先级v2.md
+++ b/src/site/notes/前端/浏览器/请求优先级v2.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"///v2/","dgHomeLink":true,"dgPassFrontmatter":false}
+{"dg-publish":true,"dg-permalink":"chrome/resouce-fetch-priority","permalink":"/chrome/resouce-fetch-priority/","dgHomeLink":true,"dgPassFrontmatter":false}
 ---
 
 
